--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 mediapipe==0.10.11
 numpy==1.25.2
-opencv_contrib_python==4.7.0.72
-opencv_python==4.9.0.80
-opencv_python_headless==4.6.0.66
+opencv-contrib-python==4.10.0.84
+opencv-python===4.10.0.84
